footer alignment fixed

--- a/client/css/src/footer.styl
+++ b/client/css/src/footer.styl
@@ -49,20 +49,19 @@
 	display: -ms-flex
 	flex-flow: column wrap
 	-webkit-flex-flow: column wrap
-	-ms-flex-flow: column wrap
-	justify-content: space-around
-	-webkit-justify-content: space-around
-	-ms-justify-content: space-around
-	align-content: center
-	-webkit-align-content: center
-	-ms-align-content: center
-	align-items: center
-	-webkit-align-items: center
-	-ms-align-items: center
+	// -ms-flex-flow: column wrap
+	// justify-content: space-around
+	// -webkit-justify-content: space-around
+	// -ms-justify-content: space-around
+	// align-content: center
+	// -webkit-align-content: center
+	// -ms-align-content: center
+	// align-items: center
+	// -webkit-align-items: center
+	// -ms-align-items: center
 	background-color: darkNavy
 
 .col-2-item
-	flex-grow: 1
 	-webkit-flex-grow: 1
 	-ms-flex-flow: 1
 	flex-shrink: 1
@@ -71,6 +70,9 @@
 	flex-basis: auto
 	-webkit-flex-basis: auto
 	-ms-flex-basis: auto
+	align-self: center
+	-webkit-align-self: center
+	-ms-align-self: center
 	color: #fff
 	padding: 35px 0px 35px 0px
 
@@ -133,5 +135,12 @@
 		border-bottom: 0px
 	.footer-col-1
 		border-bottom: 1px solid gray
+	.col-2-item
+		display: flex
+		display: -webkit-flex
+		display: -ms-flex
+		justify-content: center
+		-webkit-justify-content: center
+		-ms-justify-content: center
 		
 		
