--- a/client/css/src/home.styl
+++ b/client/css/src/home.styl
@@ -77,18 +77,6 @@
 	-webkit-flex-basis: 300px
 	-ms-flex-basis: 300px
 
-.brittney-img
-	background-image: url('../../../client/img/brittney-home.jpg')
-	background-position: center
-	background-size: cover
-	height: 350px
-
-.aaron-img
-	background-image: url('../../../client/img/aaron-home.jpg')
-	background-position: center
-	background-size: cover
-	height: 350px
-
 .about-us-text
 	height: 100px
 
